# Lox-Interpreter

./: CMakeLists.txt  README.md
include/: lox.hpp  scanner.hpp  token.hpp  tokentype.hpp
src/: lox.cpp  main.cpp  scanner.cpp  token.cpp
